# count-goober

./: .dockerignore  .gitignore  .pre-commit-config.yaml  .travis.yml  Dockerfile  Makefile  README.md  pyproject.toml
.circleci/: config.yml
count_goober/: app.py
sample_app/: app.py  fib.py
scripts/: prep-assets.sh
tests/: test_fib.py
