[tool.poetry]
name = "sample-app"
version = "0.1.0"
description = ""
authors = ["Alex Goodman <somewhere@nowhere.com>"]

[tool.poetry.dependencies]
python = "^3.8"
nltk = "^3.5"
word2number = "^1.1"
num2words = "^0.5.10"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
mypy = "^0.790"
black = "^20.8b1"

[tool.poetry.scripts]
sample_app = 'sample_app.app:run'

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
