[tool.poetry]
name = "count-goober"
version = "0.1.0"
description = ""
authors = ["Alex Goodman <somewhere@nowhere.com>"]
include = ["assets/**/*"]

[tool.poetry.dependencies]
python = "^3.8"
word2number = "^1.1"
num2words = "^0.5.10"
nltk = "^3.6.3"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
mypy = "^0.790"
black = "^20.8b1"

[tool.poetry.scripts]
count-goober = 'count_goober.app:run'

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
